# PSFmodels

./: .appveyor.yml  .github_changelog_generator  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile  README.md  Untitled.ipynb  examples.ipynb  lightsheet.ipynb  plot_perf.py  psfmath.h  pyproject.toml  setup.cfg  setup.py  tox.ini  vectorialPSF.cpp
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
conda.recipe/: meta.yaml
notebooks/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  examples.ipynb
psfmodels/: __init__.py  _core.py  cuvec.py  main.cpp  pythonBindings.cpp  scalarPSF.cpp  vectorialPSF.cpp
src/: psfmath.h  pybind.cpp  vecpsf.cpp  vectorialPSF.cpp
src/_psfmodels/: psfmath.h  pythonBindings.cpp  scalarPSF.cpp  vectorialPSF.cpp
src/_psfmodels-stubs/: __init__.pyi
src/psfmodels/: __init__.py  _core.py  _cuvec.py  _jax_bessel.py  _napari.py  _version.py  napari.yaml
src/psfmodels/v2/: _aguet.py  _aguet2009.py  _hu2020.py  _li2017.py  cupy.py  jax.py  torch.py
tests/: matconfig.m  matpsf.tif  test_napari_plugin.py  test_psf.py  test_purepy.py
