[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
    "pybind11>=2.8.0",
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/psfmodels/_version.py"

[tool.check-manifest]
ignore = [
    ".github_changelog_generator",
    ".pre-commit-config.yaml",
    "fig.png",
    "notebooks/*",
    "tests/*",
    "tox.ini"
]
