
[metadata]
name = psfmodels
url = https://github.com/tlambert03/psfmodels
author = Talley Lambert
author_email = talley.lambert@gmail.com
description = Scalar and vectorial models of the microscope point spread function (PSF).
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/psfmodels

[options]
zip_safe = False
packages = psfmodels
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy

[options.extras_require]
testing =
    tox
    tox-conda
    pytest
    pytest-cov
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = psfmodels

[pydocstyle]
match_dir = psfmodels
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = psfmodels
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
