[metadata]
name = psfmodels
description = Scalar and vectorial models of the microscope point spread function (PSF).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tlambert03/psfmodels
author = Talley Lambert
author_email = talley.lambert@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: napari
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code =https://github.com/tlambert03/psfmodels

[options]
packages =
    psfmodels
    _psfmodels-stubs
install_requires =
    numpy
    scipy>=0.14.0
    typing-extensions
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    psfmodels = psfmodels:napari.yaml

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    flake8-typing-imports
    ipython
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest-cov
    tox
    tox-conda
testing =
    pytest
    pytest-cov
    tox
    tox-conda
    magicgui;platform_system!="Linux"
    pyside2;platform_system!="Linux"
    qtpy;platform_system!="Linux"

[options.package_data]
* = *.pyi, py.typed

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = psfmodels

[pydocstyle]
match_dir = psfmodels
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = psfmodels
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
